[gd_scene load_steps=3 format=3 uid="uid://u50yudtgksw7"]

[ext_resource type="FontFile" uid="uid://krpds00dlcrv" path="res://fonts/Xolonium-Regular.ttf" id="1_1wgtc"]
[ext_resource type="Script" path="res://canvas_layer.gd" id="1_rwag8"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rwag8")

[node name="PersonalBest" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 116.875
offset_right = 44.5
offset_bottom = 154.875
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1wgtc")
theme_override_font_sizes/font_size = 31
text = "PB: 0"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1wgtc")
theme_override_font_sizes/font_size = 124
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_1wgtc")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.45
offset_top = -202.665
offset_right = 69.55
offset_bottom = -102.665
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.34, 1.34)
theme_override_fonts/font = ExtResource("1_1wgtc")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
